...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tool:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/item_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_constraint_end_margin"
                android:layout_marginLeft="@dimen/item_constraint_start_margin"
                android:layout_marginRight="@dimen/item_constraint_end_margin"
                android:layout_marginStart="@dimen/item_constraint_start_margin"
...
