...
        android:id="@+id/linear_layout_trailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/recipe_name_text_size"
...
            <!--android:id="@+id/fragment_recipe_steps_list_container"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="50">-->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_recipe_steps_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_constraint_start_margin"
                android:padding="@dimen/item_constraint_start_margin"
                android:scrollbars="vertical">

...
