<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_fragment_framelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bakingapp.ui.StepFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_step_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="@dimen/recipe_name_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_step_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="@dimen/recipe_step_desc_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_frame" />

        <Button
            android:id="@+id/btn_previous_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_constraint_end_margin"
            android:layout_marginLeft="@dimen/item_constraint_start_margin"
            android:layout_marginRight="@dimen/item_constraint_end_margin"
            android:layout_marginStart="@dimen/item_constraint_start_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_constraint_end_margin"
            android:layout_marginRight="@dimen/item_constraint_end_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <FrameLayout
            android:id="@+id/player_frame"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_frame_layout_height"
            android:layout_weight="0.5"
            android:background="@color/background_color_player_layout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_step_short_description">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/step_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />
        </FrameLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
